document -g commandline option

--- a/docs/emelfm2.1
+++ b/docs/emelfm2.1
@@ -47,11 +47,14 @@ Set the configuration\-data directory to DIR (default: ~/.config/emelfm2).
 \fB\-a\fR,\fB\-\-share\-config\fR=\fI DIR\fR
 Also load configuration\-data from directory DIR. Session config data are not saved to DIR.
 .TP
-\fB\-e\fR,\fB\-\-encoding\fR=\fI TYPE\fR
-Set the filesystem character encoding to TYPE.
+\fB\-e\fR,\fB\-\-encoding\fR=\fI ENC\fR
+Set the filesystem character encoding to ENC.
 .TP
-\fB\-f\fR,\fB\-\-fallback\-encoding=\fI TYPE\fR
-Set the fallback encoding to TYPE (default: ISO\-8859\-1).
+\fB\-f\fR,\fB\-\-fallback\-encoding=\fI ENC\fR
+Set the fallback encoding to ENC (default: ISO\-8859\-1).
+.TP
+\fB\-g\fR,\fB\-\-lang=\fI LANG\fR
+Set config-file language to LANG (default: from environment variable).
 .TP
 \fB\-i\fR,\fB\-\-ignore\-problems\fR
 Ignore the encoding/locale problems (use at your own risk!).
