--- a/docs/README
+++ b/docs/README
@@ -4,29 +4,31 @@ This file is part of emelFM2.
 DESCRIPTION
 ~~~~~~~~~
 emelFM2 is a file manager that implements the popular two-pane
-design. It features a simple GTK+2 interface, a flexible filetyping
-scheme, and a built-in command line for executing commands
-without opening an xterm.
+design. It features a simple GTK interface, a flexible filetyping
+scheme, and a built-in command line for executing commands without
+opening a terminal-emulator application. It's designed to be small,
+and as fast as possible.
 
-emelFM2 is licensed under the FSF General Public License.
+emelFM2 requires Gtk+2.6 or later. Gtk+3.x is ok, though problem(s)
+(notably aspects of the UI layout) may become apparent. It's too
+soon to comment about Gtk+4.
 
-This version of emelFM2 requires Gtk+2.6 or later. Gtk+3.x should
-be ok, though some extra problems may emerge. It's too soon to
-comment about gtk+4.
+H2 LICENSE
+~~~~~~~~~~
+emelFM2 is licensed under the GNU General Public License V.3.
 
 WEBSITES
 ~~~~~~~~
-emelFM2           http://www.emelfm2.net
+emelFM2       http://www.emelfm2.net
 
-updated emelFM1   http://www.havens.de/elm/emelfm.html
-old emelFM1           http://emelFM.sourceforge.net/
+emelFM1       http://emelFM.sourceforge.net/
 
 MAILING LIST
-~~~~~~~~~
+~~~~~~~~~~~~
 There is an emelFM2 mailing list provided by freelists.org. You
 can subscribe to that list by sending an email to
 emelfm2-request@freelists.org with 'subscribe' in the subject
-and you can  unsubscribe from the list by sending email to the
+and you can unsubscribe from the list by sending email to the
 same address with 'unsubscribe' in the subject.
 
 email address: emelfm2@freelists.org
@@ -36,33 +38,43 @@ list archive:  http://www.freelists.org/archives/emelfm2/
 HELP
 ~~~~
 Your help is wanted! It is always nice to get bug reports, comments,
-feature requests or patches. There is an emelFM2 wiki where some
-contents needs to be added. If you have any programming skills,
-you might also want to take a look at the TODO list.
+feature requests or patches. There is a wiki where some content needs
+to be added. If you have any programming skills, you might also want
+to take a look at the TODO list.
 
 Please send bug reports, comments or feature requests to the mailing
 list (see above). You do not need to be a subscriber to the list.
 
 INTERNATIONALISATION
-~~~~~~~~~~~~~~~~
-i18n support is almost complete. Within the codebase, virtually all
-strings to be translated have the necessary _() or N_() tags. There
-are a few for which a final decision on whether to translate has not
-yet been made.
+~~~~~~~~~~~~~~~~~~~~
+Within the codebase, all strings to be translated have the necessary
+_() or N_() tags.
 
-So if you don't mind possibly making some relatively minor changes
-later, feel free to do a translation. Start by asking on the mailing list
-if anybody else is already doing the same. The make targets are
+Translations exist for
+ * japanese
+ * simplified chinese
+ * french
+ * german
+ * russian
+ * polish
+
+Feel free to do another language. Start by asking on the mailing
+list if anybody else is already doing the same. The 'make' targets are
 i18n and [un]install_i18n.
 
-The help documents USAGE and CONFIGURATION might well be
-translated at some future time, but they are not yet mature.
+The help documents USAGE and CONFIGURATION might well be translated
+at some future time, but they are not yet mature.
 Probably not worth translating yet.
 
-INSTALLATION, UNINSTALLATION
-~~~~~~~~~~~~~~~~~~~~~~~~~~~
-See the INSTALL file.
+BETWEEN OFFICIAL RELEASES
+~~~~~~~~~~~~~~~~~~~~~~~~~
+Code is not committed to git or svn unless it is expected to build and run
+as intended. However some precautions are prudent. See the WARNING file.
 
 BUILD, COMPILE
-~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~
 See files CONSTRUCT and Makefile.config.
+
+INSTALLATION, UNINSTALLATION
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+See the INSTALL file.
